--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
   },
   "license": "Apache 2",
   "scripts": {
-    "test": "grunt coverage"
+    "test": "grunt test"
   },
   "config": {
     "blanket": {
