--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   },
   "devDependencies": {
     "chai": "*",
+    "blanket": "*",
     "mocha": "*",
     "grunt": "*",
     "grunt-blanket": "*",
