jshint option changes

--- a/test/.jshintrc
+++ b/test/.jshintrc
@@ -15,32 +15,16 @@
   "nonbsp": true,
   "nonew": true,
   "quotmark": "single",
-  "singleGroups": true,
+  "singleGroups": false,
   "undef": true,
   "unused": true,
   "maxcomplexity": 10,
   "maxdepth": 5,
   "maxerr": 100,
   "maxlen": 250,
-  "maxparams": 3,
+  "maxparams": 5,
   "maxstatements": 50,
   "globalstrict": true,
-  "globals": {
-    "arguments": true,
-    "console": true,
-    "setTimeout": true,
-    "clearTimeout": true,
-    "setInterval": true,
-    "clearInterval": true,
-    "root": true,
-    "__filename": true,
-    "__dirname": true,
-    "global": true,
-    "process": true,
-    "module": true,
-    "require": true,
-    "Buffer": true,
-    "describe": true,
-    "it": true
-  }
+  "node": true,
+  "mocha": true
 }
