--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "0.0.24",
+  "version": "0.0.25",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "main": "index.js",
   "directories": {
@@ -23,8 +23,8 @@
     "node.extend": "^1.1.3"
   },
   "devDependencies": {
-    "chai": "*",
     "blanket": "*",
+    "chai": "*",
     "grunt": "*",
     "grunt-blanket": "*",
     "grunt-cli": "*",
@@ -33,6 +33,7 @@
     "grunt-contrib-jshint": "*",
     "grunt-coveralls": "*",
     "grunt-eslint": "*",
+    "grunt-jscs": "*",
     "grunt-jsdoc-to-markdown": "*",
     "grunt-jslint": "*",
     "grunt-jsonlint": "*",
