--- a/test/.eslintrc
+++ b/test/.eslintrc
@@ -12,6 +12,6 @@
     "no-underscore-dangle": 0,
     "handle-callback-err": 0,
     "no-ternary": 0,
-    "spaced-line-comment": 0
+    "spaced-comment": 0
   }
 }
