--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "0.0.44",
+  "version": "0.0.45",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "main": "index.js",
   "directories": {
@@ -40,6 +40,7 @@
     "grunt-jsonlint": "latest",
     "grunt-mocha-test": "latest",
     "grunt-todos": "latest",
+    "husky": "latest",
     "load-grunt-tasks": "latest",
     "mocha": "latest",
     "mocha-lcov-reporter": "latest",
@@ -55,6 +56,7 @@
     "clean": "grunt cleanup",
     "lint": "grunt lint",
     "docs": "grunt docs",
-    "build": "grunt build"
+    "build": "grunt build",
+    "precommit": "npm run build"
   }
 }
