--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "0.0.57",
+  "version": "0.0.58",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -30,7 +30,8 @@
     "lint": "grunt lint",
     "docs": "grunt docs",
     "build": "grunt build",
-    "prepush": "npm run build"
+    "prepush": "npm run build",
+    "synclibs": "npm install && npm update"
   },
   "dependencies": {
     "shelljs": "^0.5.3",
