--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "0.0.65",
+  "version": "0.0.66",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -59,6 +59,13 @@
     "load-grunt-tasks": "latest",
     "mocha": "latest",
     "mocha-lcov-reporter": "latest",
-    "time-grunt": "latest"
+    "rimraf": "latest",
+    "time-grunt": "latest",
+    "travis-cov": "latest"
+  },
+  "config": {
+    "travis-cov": {
+      "threshold": 100
+    }
   }
 }
