--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "0.0.70",
+  "version": "0.0.71",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -31,20 +31,17 @@
     "docs": "grunt docs",
     "build": "grunt build",
     "prepush": "npm run build",
-    "synclibs": "npm install && npm update"
+    "grunt": "grunt"
   },
   "dependencies": {
     "shelljs": "^0.6.0",
     "node.extend": "^1.1.5"
   },
   "devDependencies": {
-    "blanket": "latest",
     "chai": "latest",
     "grunt": "latest",
-    "grunt-blanket": "0.0.9",
     "grunt-cli": "latest",
     "grunt-contrib-clean": "latest",
-    "grunt-contrib-copy": "latest",
     "grunt-contrib-jshint": "latest",
     "grunt-coveralls": "latest",
     "grunt-eslint": "latest",
@@ -52,20 +49,14 @@
     "grunt-jsdoc-to-markdown": "latest",
     "grunt-jslint": "latest",
     "grunt-jsonlint": "latest",
-    "grunt-mocha-test": "latest",
+    "grunt-mocha-istanbul": "latest",
     "grunt-todos": "latest",
     "husky": "latest",
+    "istanbul": "latest",
     "load-grunt-configs": "latest",
     "load-grunt-tasks": "latest",
     "mocha": "latest",
-    "mocha-lcov-reporter": "latest",
     "rimraf": "latest",
-    "time-grunt": "latest",
-    "travis-cov": "latest"
-  },
-  "config": {
-    "travis-cov": {
-      "threshold": 100
-    }
+    "time-grunt": "latest"
   }
 }
