--- a/.travis.yml
+++ b/.travis.yml
@@ -13,3 +13,10 @@ node_js:
   - "iojs"
 before_install:
   - npm install -g npm
+  - go get -u github.com/gopherjs/gopherjs
+addons:
+  apt:
+    sources:
+      - ubuntu-lxc/lxd-stable
+    packages:
+      - golang
