--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -36,7 +36,7 @@
     "grunt": "grunt"
   },
   "dependencies": {
-    "node.extend": "^1.1.5",
+    "node.extend": "^1.1.6",
     "shelljs": "^0.7.4"
   },
   "devDependencies": {
@@ -61,6 +61,7 @@
     "husky": "latest",
     "istanbul": "latest",
     "jit-grunt": "latest",
+    "js-project-commons": "latest",
     "load-grunt-configs": "latest",
     "mocha": "latest",
     "rimraf": "latest",
