--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "1.0.5",
+  "version": "1.0.6",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -60,10 +60,8 @@
     "grunt-shell": "latest",
     "husky": "latest",
     "istanbul": "latest",
-    "jit-grunt": "latest",
     "js-project-commons": "latest",
     "mocha": "latest",
-    "rimraf": "latest",
-    "time-grunt": "latest"
+    "rimraf": "latest"
   }
 }
