--- a/.travis.yml
+++ b/.travis.yml
@@ -1,18 +1,16 @@
 language: node_js
 sudo: true
 node_js:
-  - "7"
+  - "node"
   - "6"
-  - "5"
   - "4"
   - "0.12"
   - "0.10"
-  - "iojs"
 before_install:
   - npm install -g npm@^3
 before_script:
   - chmod -R 777 ./project/build/integration
 env:
-  - DOCKER_INTEGRATION_TEST_NODE_VERSION=7
+  - DOCKER_INTEGRATION_TEST_NODE_VERSION=6
 services:
   - docker
