--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_install:
 before_script:
   - chmod -R 777 ./project/build/integration
 env:
-  - DOCKER_INTEGRATION_TEST_NODE_VERSION=8
+  global:
+    - DOCKER_INTEGRATION_TEST_NODE_VERSION=8
 services:
   - docker
