--- a/.travis.yml
+++ b/.travis.yml
@@ -5,10 +5,8 @@ node_js:
   - "8"
   - "6"
   - "4"
-  - "0.12"
-  - "0.10"
 before_install:
-  - npm install -g npm@^3
+  - npm install -g npm@latest
 before_script:
   - chmod -R 777 ./project/build/integration
 env:
