--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,9 @@ node_js:
   - "8"
   - "6"
   - "4"
+matrix:
+  allow_failures:
+    - node_js: node
 before_install:
   - npm install -g npm@latest
 before_script:
