--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "node-go-require",
-  "version": "1.0.45",
+  "version": "1.1.0",
   "description": "Load Google GO files as any javascript modules under nodeJS runtime.",
   "author": {
     "name": "Sagie Gur-Ari",
@@ -38,8 +38,7 @@
     "grunt": "grunt"
   },
   "dependencies": {
-    "node.extend": "^2.0.0",
-    "shelljs": "^0.7.8"
+    "node.extend": "^2.0.0"
   },
   "devDependencies": {
     "chai": "latest",
