--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,14 +11,19 @@ jobs:
       matrix:
         node-version: ['8.x', '10.x', '12.x', '14.x']
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
+    - name: Setup Go Env
+      shell: bash
+      run: |
+        echo "::set-env name=GOPATH::${{ github.workspace }}/go"
+        echo "::add-path::${{ github.workspace }}/go/bin"
     - name: Install Go
       uses: actions/setup-go@v2
       with:
         go-version: 1.14.x
     - name: Install gopherjs
       run: go get -u github.com/gopherjs/gopherjs
+    - name: Checkout
+      uses: actions/checkout@v2
     - name: Install node.js
       uses: actions/setup-node@v1
       with:
