replace task runner

--- a/package.json
+++ b/package.json
@@ -25,30 +25,29 @@
     "test": "test/spec"
   },
   "scripts": {
-    "test": "grunt test",
-    "clean": "grunt cleanup",
-    "lint": "grunt lint",
-    "docs": "grunt docs",
-    "format": "grunt format",
-    "build": "grunt build",
-    "jstest": "grunt jstest",
-    "postpublish": "grunt post-publish",
-    "grunt": "grunt"
-  },
-  "husky": {
-    "hooks": {
-      "pre-push": "npm run build"
-    }
+    "clean": "rm -Rf ./.nyc_output ./coverage",
+    "format": "js-beautify --config ./.jsbeautifyrc --file ./*.js ./lib/**/*.js ./test/**/*.js",
+    "lint-js": "eslint ./*.js ./lib/**/*.js ./test/**/*.js",
+    "lint-css": "stylelint --allow-empty-input ./docs/**/*.css",
+    "lint": "npm run lint-js && npm run lint-css",
+    "jstest": "mocha --exit ./test/spec/**/*.js",
+    "coverage": "nyc --reporter=html --reporter=text --reporter=lcovonly --check-coverage=true mocha --exit ./test/spec/**/*.js",
+    "docs": "jsdoc2md lib/**/*.js > ./docs/api.md",
+    "test": "npm run clean && npm run format && npm run lint && npm run docs && npm run coverage",
+    "postpublish": "git fetch && git pull"
   },
   "dependencies": {
-    "node.extend": "^2.0.2"
+    "node.extend": "^2"
   },
   "devDependencies": {
-    "chai": "latest",
-    "grunt": "latest",
-    "grunt-cli": "latest",
-    "husky": "latest",
-    "js-project-commons": "latest",
-    "rimraf": "latest"
+    "chai": "^4",
+    "eslint": "^8",
+    "js-beautify": "^1",
+    "jsdoc-to-markdown": "^7",
+    "mocha": "^9",
+    "nyc": "^15",
+    "rimraf": "^3",
+    "stylelint": "^13",
+    "stylelint-config-standard": "^22"
   }
 }
