--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ['10.x', '12.x', '14.x']
+        node-version: ['12.x', '14.x']
     steps:
     - name: Set GOPATH
       run: |
