--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -2,6 +2,7 @@ name: CI
 on: [push, pull_request]
 env:
   CLICOLOR_FORCE: 1
+  ACTIONS_ALLOW_UNSECURE_COMMANDS: true
 jobs:
   ci:
     name: CI
@@ -9,7 +10,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        node-version: ['10.x', '12.x', '14.x']
+        node-version: ['12.x', '14.x']
     steps:
     - name: Set GOPATH
       run: |
@@ -20,7 +21,11 @@ jobs:
     - name: Install Go
       uses: actions/setup-go@v2
       with:
-        go-version: 1.12.x
+        go-version: 1.17.x
+    - name: Set GO Version
+      run: |
+          echo "##[set-env name=GOPHERJS_GOROOT;]$(go env GOROOT)"
+      shell: bash
     - name: Install gopherjs
       run: go get -u github.com/gopherjs/gopherjs
     - name: Checkout
@@ -37,4 +42,4 @@ jobs:
       uses: coverallsapp/github-action@master
       with:
         github-token: ${{ secrets.GITHUB_TOKEN }}
-        path-to-lcov: './target/coverage/report/lcov.info'
+        path-to-lcov: './coverage/lcov.info'
