--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -27,7 +27,7 @@ jobs:
           echo "##[set-env name=GOPHERJS_GOROOT;]$(go env GOROOT)"
       shell: bash
     - name: Install gopherjs
-      run: go get -u github.com/gopherjs/gopherjs
+      run: go install github.com/gopherjs/gopherjs@latest
     - name: Checkout
       uses: actions/checkout@v2
     - name: Install node.js
